--- a/index.qmd
+++ b/index.qmd
@@ -6,8 +6,10 @@ Hi, my name is Jin. I'm an undergraduate studying Microbiology at [California Po
 
 I'm largely interested in pathogenesis and mutualistic host-microbe relationships, but I also do some computer science (nominally) in the lab. Learn more in the [research section](research.qmd).
 
-The [blog](blog.qmd) will simply be a place where I learn about whatever I want; I'm a curious person.
+The [blog section](blog.qmd) is simply a place where I learn about whatever I want.
 
-I also enjoy reading and writing in my freetime, though I'm fully aware that no one will ever read what I write. You can check the Substack if you'd like.
+I enjoy reading and writing in my freetime, though I'm fully aware that no one will ever read what I write. You can check the Substack if you'd like.
 
-In any case, this website should mainly serve as my hub for thinking, a way to learn via soliloquy; I'm also forced to post accurate information and therefore, to truly understand a subject before I write about it.
+In any case, this website should primarily serve as my central hub for thinking, a way to learn via soliloquy. Since this is on the internet, I'm also forced to post accurate information which should aid my learning.
+
+You can contact me via email here: [jko23@calpoly.edu](mailto:jko23@calpoly.edu).
