Fixing bibliography path in 8-17-2025.qmd

--- a/research/8-17-2025.qmd
+++ b/research/8-17-2025.qmd
@@ -3,7 +3,7 @@ title: "Iron and the Motility of CFT073"
 date: "2025-08-17" 
 categories: 
     - "Lab Research"
-bibliography: references.bib
+bibliography: ../references.bib
 ---
 
 # Preface
