Included reading times for the blog page and some minor adjustments to the blog post.

--- a/blog.qmd
+++ b/blog.qmd
@@ -5,7 +5,7 @@ listing:
     date-format: iso
     categories: true
     sort: "date asc"
-    fields: [date, title]
+    fields: [date, title, reading-time]
     type: table
     table-hover: true
     feed: true
