--- a/books.qmd
+++ b/books.qmd
@@ -56,11 +56,16 @@ One More Thing: Stories and Other Stories, *B.J. Novak*
 Bel Canto, *Ann Patchett*  
   ISBN: [9780060838720](https://www.worldcat.org/isbn/9780060838720)
 
+The Catcher in the Rye *J. D. Salinger*  
+  ISBN: [9780316769488](https://www.worldcat.org/isbn/9780316769488)
+
 Kusamakura, *Natsume Sōseki*  
   ISBN: [9780140449869](https://www.worldcat.org/isbn/9780140449869)
 
 A Little Life, *Hanya Yanagihara*  
   ISBN: [9780385539258](https://www.worldcat.org/isbn/9780385539258)
 
+---
 
+[Quotes](quotes.qmd) from my favorites
 
