fixed the quotes page removing redundancies

--- a/quotes.qmd
+++ b/quotes.qmd
@@ -10,20 +10,14 @@ title: Quotes
 
 > Still, being able to feel pain was good, he thought. It's when you can't even feel pain anymore that you're in real trouble.
 
-— Haruki Murakami
-
 > It is not that the meaning cannot be explained. But there are certain meanings that are lost forever the moment they are explained in words.
 
 — Haruki Murakami
 
 > Many, many men have been just as troubled morally and spiritually as you are right now. Happily, some of them kept records of their troubles. You'll learn from them—if you want to. Just as someday, it you have something to ofter, someone will learn something from you. It's a beautiful reciprocal arrangement. And it isn't education. It's history. It's poetry. I'm not trying to tell you that only educated and scholarly men are able to contribute something valuable to the world. It's not so. But I do say that educated and scholarly men, it they're brilliant and creative to begin with—which, unfortunately, is rarely the case—tend to leave infinitely more valuable records behind them than men do who are merely brilliant and creative. They tend to express themselves more clearly, and they usually have a passion for following their thoughts through to the end.
 
-— J. D. Salinger
-
-> "Anyway, I like it now," I said. "I mean right now. Sitting here with you and just chewing the fat and horsing—"
-
-> "That isn't anything really!"
-
+> "Anyway, I like it now," I said. "I mean right now. Sitting here with you and just chewing the fat and horsing—"\
+> "That isn't anything really!"\
 > "It is so something really! Certainly it is! Why the hell isn't it? People never think anything is anything really. I'm getting goddam sick of it."
 
 — J. D. Salinger
