--- a/quotes.qmd
+++ b/quotes.qmd
@@ -25,3 +25,7 @@ title: Quotes
 > He was in love, and never had he felt such kindness towards another person. Never had he received such kindness. Maybe the private life wasn't forever. Maybe everyone got it for a little while and then spend the rest of their lives remembering.
 
 — Ann Patchett
+
+> 結局他人の痛みなんて分かってしまえば、まともに生きていけなかったんだ。
+
+—時雨沢 恵一
