Added the research post (CA). Also added quotes and fixed some typos.

--- a/references.bib
+++ b/references.bib
@@ -65,6 +65,23 @@
   file = {/Users/jinko/Zotero/storage/EUKPAF3G/Conover et al. - 2015 - Establishment and Characterization of UTI and CAUTI in a Mouse Model.pdf}
 }
 
+@article{d.NewMethodExopolysaccharide2001,
+  title = {New Method for Exopolysaccharide Determination in Culture Broth Using Stirred Ultrafiltration Cells},
+  author = {D., Bergmaier and C., Lacroix and Macedo, M. Guadalupe and C., Champagne},
+  year = {2001},
+  month = oct,
+  journal = {Applied Microbiology and Biotechnology},
+  volume = {57},
+  number = {3},
+  pages = {401--406},
+  issn = {0175-7598, 1432-0614},
+  doi = {10.1007/s002530100764},
+  urldate = {2025-09-21},
+  copyright = {http://www.springer.com/tdm},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/LIEQXEXL/D. et al. - 2001 - New method for exopolysaccharide determination in culture broth using stirred ultrafiltration cells.pdf}
+}
+
 @article{fitzpatrickStructureMacABTolCABCtype2017,
   title = {Structure of the {{MacAB-TolC ABC-type}} Tripartite Multidrug Efflux Pump},
   author = {Fitzpatrick, Anthony W.P. and Llabr{\'e}s, Salom{\'e} and Neuberger, Arthur and Blaza, James N. and Bai, Xiao-chen and Okada, Ui and Murakami, Satoshi and {van Veen}, Hendrik W. and Zachariae, Ulrich and Scheres, Sjors H.W. and Luisi, Ben F. and Du, Dijun},
@@ -495,6 +512,23 @@
   pmcid = {PMC3108441},
   pmid = {20420522},
   file = {/Users/jinko/Zotero/storage/NAAV52K6/Noinaj et al. - 2010 - TonB-dependent transporters regulation, structure.pdf}
+}
+
+@article{obadiaInfluenceTyrosineKinaseWzc2007,
+  title = {Influence of {{Tyrosine-Kinase Wzc Activity}} on {{Colanic Acid Production}} in {{Escherichia}} Coli {{K12 Cells}}},
+  author = {Obadia, Brice and Lacour, Soline and Doublet, Patricia and {Baubichon-Cortay}, H{\'e}l{\`e}ne and Cozzone, Alain J. and Grangeasse, Christophe},
+  year = {2007},
+  month = mar,
+  journal = {Journal of Molecular Biology},
+  volume = {367},
+  number = {1},
+  pages = {42--53},
+  issn = {00222836},
+  doi = {10.1016/j.jmb.2006.12.048},
+  urldate = {2025-09-21},
+  copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/9I3ALZSJ/Obadia et al. - 2007 - Influence of Tyrosine-Kinase Wzc Activity on Colanic Acid Production in Escherichia coli K12 Cells.pdf}
 }
 
 @article{rajapakshaInsightAcrABTolCComplex2021,
