added diabetes to the blog section!

--- a/references.bib
+++ b/references.bib
@@ -170,6 +170,19 @@
   file = {/Users/jinko/Zotero/storage/2WNFSRX2/Gunn et al. - 2016 - What's on the Outside Matters The Role of the Ext.pdf}
 }
 
+@book{hallGuytonHallTextbook2011,
+  title = {Guyton and {{Hall}} Textbook of Medical Physiology},
+  shorttitle = {Guyton and {{Hall}} Textbook of Medical Physiology},
+  author = {Hall, John E. and Hall, John E. and Guyton, Arthur C.},
+  year = {2011},
+  edition = {12. ed},
+  publisher = {Saunders, Elsevier},
+  address = {Philadelphia, Pa},
+  isbn = {978-1-4160-4574-8 978-0-8089-2400-5},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/23CDSGC5/Hall et al. - 2011 - Guyton and Hall textbook of medical physiology Student consult. Activate at studentconsult.com. Sea.pdf}
+}
+
 @article{hidalgoInhibitionEscherichiaColi2011,
   title = {Inhibition of {{Escherichia}} Coli {{CFT073 fliC Expression}} and {{Motility}} by {{Cranberry Materials}}},
   author = {Hidalgo, Gabriela and Chan, Michelle and Tufenkji, Nathalie},
@@ -307,6 +320,18 @@
   pmid = {11544226},
   keywords = {Efflux},
   file = {/Users/jinko/Zotero/storage/9YZF54JT/Kobayashi et al. - 2001 - Novel Macrolide-Specific ABC-Type Efflux Transport.pdf}
+}
+
+@book{kumarRobbinsCotranPathologic2021,
+  title = {Robbins \& {{Cotran}} Pathologic Basis of Disease},
+  editor = {Kumar, Vinay and Abbas, Abul K. and Aster, Jon C. and Turner, Jerrold R. and Perkins, James Alfred and Robbins, Stanley L. and Cotran, Ramzi S.},
+  year = {2021},
+  edition = {Tenth edition},
+  publisher = {Elsevier},
+  address = {Philadelphia, PA},
+  isbn = {978-0-323-53113-9 978-0-323-60992-0},
+  langid = {english},
+  file = {/Users/jinko/Zotero/storage/AHLQFA54/Kumar et al. - 2021 - Robbins & Cotran pathologic basis of disease.pdf}
 }
 
 @article{laneRoleMotilityColonization2005,
@@ -725,4 +750,8 @@
   langid = {english},
   keywords = {Bacterial structural biology,Biofilms},
   file = {/Users/jinko/Zotero/storage/M5YWZ5Z8/Zhan et al. - 2024 - A c-di-GMP signaling module controls responses to iron in Pseudomonas aeruginosa.pdf}
+}
+
+@book{zotero-item-189,
+  type = {Book}
 }
