added a article about stationary phase in the research section!

--- a/references.bib
+++ b/references.bib
@@ -48,6 +48,22 @@
   file = {/Users/jinko/Zotero/storage/S8BLMWEX/Bru et al. - 2020 - Time-lapse Imaging of Bacterial Swarms and the Collective Stress Response.pdf}
 }
 
+@article{chareyreBacterialIronHomeostasis2018,
+  title = {Bacterial {{Iron Homeostasis Regulation}} by {{sRNAs}}},
+  author = {Chareyre, Sylvia and Mandin, Pierre},
+  year = {2018},
+  month = mar,
+  journal = {Microbiology Spectrum},
+  volume = {6},
+  number = {2},
+  pages = {10.1128/microbiolspec.rwr-0010-2017},
+  publisher = {American Society for Microbiology},
+  doi = {10.1128/microbiolspec.rwr-0010-2017},
+  urldate = {2025-10-03},
+  abstract = {While iron is essential to sustain growth, its excess can be detrimental to the cell by generating highly toxic reactive oxygen species. Regulation of iron homeostasis thus plays a vital role in almost all living organisms. During the last 15 years, the small RNA (sRNA) RyhB has been shown to be a key actor of iron homeostasis regulation in bacteria. Through multiple molecular mechanisms, RyhB represses expendable iron-utilizing proteins, promotes siderophore production, and coordinates Fe-S cluster cofactor biogenesis, thereby establishing a so-called iron-sparing response. In this review, we will summarize knowledge on how sRNAs control iron homeostasis mainly through studies on RyhB in Escherichia coli. The parallel roles and modes of action of other sRNAs in different bacteria will also be described. Finally, we will discuss what questions remain to be answered concerning this important stress response regulation by sRNAs.},
+  file = {/Users/jinko/Zotero/storage/YL7EMIII/Chareyre and Mandin - 2018 - Bacterial Iron Homeostasis Regulation by sRNAs.pdf}
+}
+
 @article{conoverEstablishmentCharacterizationUTI2015,
   title = {Establishment and {{Characterization}} of {{UTI}} and {{CAUTI}} in a {{Mouse Model}}},
   author = {Conover, Matt S. and {Flores-Mireles}, Ana L. and Hibbing, Michael E. and Dodson, Karen and Hultgren, Scott J.},
@@ -80,6 +96,23 @@
   copyright = {http://www.springer.com/tdm},
   langid = {english},
   file = {/Users/jinko/Zotero/storage/LIEQXEXL/D. et al. - 2001 - New method for exopolysaccharide determination in culture broth using stirred ultrafiltration cells.pdf}
+}
+
+@article{ezratyCommercialLysogenyBroth2014,
+  title = {Commercial {{Lysogeny Broth}} Culture Media and Oxidative Stress: {{A}} Cautious Tale},
+  shorttitle = {Commercial {{Lysogeny Broth}} Culture Media and Oxidative Stress},
+  author = {Ezraty, Benjamin and Henry, Camille and H{\'e}risse, Marion and Denamur, Erick and Barras, Fr{\'e}d{\'e}ric},
+  year = {2014},
+  month = sep,
+  journal = {Free Radical Biology and Medicine},
+  volume = {74},
+  pages = {245--251},
+  issn = {0891-5849},
+  doi = {10.1016/j.freeradbiomed.2014.07.010},
+  urldate = {2025-10-03},
+  abstract = {Lysogeny Broth (LB), most often misnamed Luria-Bertani medium, ranks among the most commonly used growth media in microbiology. Surprisingly, we observed that oxidative levels vary with the commercial origin of the LB ready to use powder. Indeed, growth on solid media of Escherichia coli and Salmonella derivatives lacking antioxidative stress defenses, such as oxyR mutant devoid of the H2O2-sensing transcriptional activator or Hpx- strains lacking catalases and peroxidases, exhibit different phenotypes on LB-Sigma or LB-Difco. Using gene fusion and exogenously added catalase, we found that LB-Sigma contains higher levels of H2O2 than LB-Difco. Also we observed differences in population counts of 82 clinical and environmental isolates of E. coli, depending on the LB used. Further investigations revealed a significant influence of the commercial origin of agar as well. Besides being a warning to the wide population of LB users, our observations provide researchers in the oxidative stress field with a tool to appreciate the severity of mutations in antioxidative stress defenses.},
+  keywords = {Enterobacteriaceae,Media brand,Microbiology,Oxidative stress},
+  file = {/Users/jinko/Zotero/storage/LK4CWA67/Ezraty et al. - 2014 - Commercial Lysogeny Broth culture media and oxidative stress A cautious tale.pdf;/Users/jinko/Zotero/storage/44JPZCGI/S0891584914003256.html}
 }
 
 @article{fitzpatrickStructureMacABTolCABCtype2017,
@@ -609,6 +642,22 @@
   pmcid = {PMC6161082},
   pmid = {29870278},
   file = {/Users/jinko/Zotero/storage/JV9YC6MZ/Robinson et al. - 2018 - The iron hand of uropathogenic Escherichia coli the role of transition metal control in virulence.pdf}
+}
+
+@article{sezonovEscherichiaColiPhysiology2007,
+  title = {Escherichia Coli {{Physiology}} in {{Luria-Bertani Broth}}},
+  author = {Sezonov, Guennadi and {Joseleau-Petit}, Dani{\`e}le and D'Ari, Richard},
+  year = {2007},
+  month = dec,
+  journal = {Journal of Bacteriology},
+  volume = {189},
+  number = {23},
+  pages = {8746--8749},
+  publisher = {American Society for Microbiology},
+  doi = {10.1128/jb.01368-07},
+  urldate = {2025-10-03},
+  abstract = {Luria-Bertani broth supports Escherichia coli growth to an optical density at 600 nm (OD600) of 7. Surprisingly, however, steady-state growth ceases at an OD600 of 0.3, when the growth rate slows down and cell mass decreases. Growth stops for lack of a utilizable carbon source. The carbon sources for E. coli in Luria-Bertani broth are catabolizable amino acids, not sugars.},
+  file = {/Users/jinko/Zotero/storage/QPZ46H9H/Sezonov et al. - 2007 - Escherichia coli Physiology in Luria-Bertani Broth.pdf}
 }
 
 @article{sharmaEscherichiaColiBiofilm2016,
