--- a/research/stationary-phase.qmd
+++ b/research/stationary-phase.qmd
@@ -6,7 +6,7 @@ categories:
 bibliography: ../references.bib
 ---
 
-Dr. Yep noticed out how _∆fur_ stalled earlier than the other strains. It’s not necessarily a problem, but I’d like to understand the cause. The paper should also explain this, so we’ll need the rationale anyway.
+Dr. Yep noticed how _∆fur_ stalled earlier than the other strains. It’s not necessarily a problem, but I’d like to understand the cause. The paper should also explain this, so we’ll need the rationale anyway.
 
 _∆fur_ entered stationary phase early in Lysogeny Broth (LB). This didn’t happen with any of the other strains or media. _Why_? I’ll attempt to explain this in a few ways.
 
